<resources>
    <string name="app_name">covid-19 Tracker</string>
    <string name="covid_19_tracker">Covid-19 Tracker</string>
    <string name="coronavirus_total_cases">Coronavirus Total Cases :</string>
    <string name="active_cases">Active Cases :</string>
    <string name="total_deaths">Total Deaths :</string>
    <string name="recovered">Recovered :</string>
    <string name="confirmed_cases">Confirmed cases</string>
    <string name="currently_infected_patients">Currently Infected Patients</string>
    <string name="serious_or_criticalcondition">Critical Condition</string>
    <string name="in_mild_condition">in Mild Condition</string>
    <string name="closed_cases">CLOSED CASES</string>
    <string name="cases_which_had_an_outcome">Cases which had an outcome :</string>
    <string name="discharged">Discharged</string>
    <string name="dailly_cases">DAILLY CASES</string>
    <string name="new_cases">New Cases:</string>
    <string name="new_deaths">New Deaths :</string>
    <string name="new_recovery">New Recovery :</string>
    <string name="deaths">Deaths</string>
    <string name="search_by_country_name">Search by Country Name</string>
    <string name="affected_countries">Affected Countries</string>
    <string name="tips_safety"><![CDATA[Tips & Safety]]></string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="test_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="test_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="app_id">ca-app-pub-6849909083372425~5754406553</string>
    <string name="unit_id">ca-app-pub-6849909083372425/5562834868</string>
</resources>